@@ -766,7 +766,8 @@ int copy_batchrequest(
           strcpy(newpal->al_atopl.name, pal->al_atopl.name);
           newpal->al_nameln = pal->al_nameln;
           newpal->al_atopl.resource = newpal->al_atopl.name + newpal->al_nameln;
-          strcpy(newpal->al_atopl.resource, pal->al_atopl.resource);
+          if (pal->al_atopl.resource != NULL)
+            strcpy(newpal->al_atopl.resource, pal->al_atopl.resource);
           newpal->al_rescln = pal->al_rescln;
           newpal->al_atopl.value = newpal->al_atopl.name + newpal->al_nameln + newpal->al_rescln;
           strcpy(newpal->al_atopl.value, pal->al_atopl.value);
