@@ -53,6 +53,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix a mom hiearchy error for running the moms on non-default ports
   b - Fix server segfault for where mom in nodes file is not in mom_hierarchy. TRQ-873.
   b - routing to a routing queue now works again, TRQ-905, bugzilla 186
+  b - Fix server segfaults that happened doing qhold for blcr job. TRQ-900.
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
